# oscproject

./: .editorconfig  .eslintignore  .gitignore  .taurignore  Cargo.toml  README.md  package.json  tauri.conf.json
.github/workflows/: release.yml
src/: main.rs
src/streamelements/: mod.rs  service.rs
webapp/: .eslintrc  .prettierrc  index.html  jest.config.js  tsconfig.json  vite.config.js  webpack.config.js
webapp/public/: index.html
webapp/src/: App.tsx  index.tsx
webapp/src/__modules__/DummyModule/: index.ts
webapp/src/__modules__/DummyModule/DummyModuleRender/: DummyModuleRender.tsx  index.ts  styled.ts
webapp/src/__modules__/SpinWheelModule/: SpinWheelModule.d.ts  constants.ts  index.ts
webapp/src/__modules__/SpinWheelModule/SpinWheelRender/: SpinWheelRender.tsx  index.ts  styled.ts
webapp/src/__modules__/SpinWheelModule/SpinWheelRender/HistoryModal/: HistoryModal.tsx  index.ts  styled.ts
webapp/src/__modules__/SpinWheelModule/SpinWheelRender/SettingsModal/: SettingsModal.tsx  styled.ts
webapp/src/__modules__/SpinWheelModule/SpinWheelRender/SpinWheel/: SpinWheel.tsx  index.ts  styled.ts
webapp/src/components/: ModuleWrapper.tsx
webapp/src/hooks/: useDimensions.ts
webapp/src/services/: modulesExtensionService.ts  notificationService.tsx  storageService.ts
webapp/src/styles/: globalStyle.ts
webapp/src/types/: ModuleExtension.d.ts  index.d.ts  streamelements.d.ts
webapp/src/utils/: constants.ts  guards.ts
zztools/: build.sh
