[package]
name = "oscproject"
version = "0.1.0"
description = "Just a simple streamer companion"
authors = ["Voguh <voguhofc@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.6.1", features = [ "path-all", "shell-open", "system-tray"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
rust_socketio = "0.4.4"
once_cell = "1.19.0"
tauri-plugin-stronghold = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
rust-argon2 = "2.1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
